added warning and commented changing the dataset

--- a/1_scraping_reddit_data_TMSMM.ipynb
+++ b/1_scraping_reddit_data_TMSMM.ipynb
@@ -11964,7 +11964,8 @@
    "id": "067eda7b",
    "metadata": {},
    "source": [
-    "# Saving comment data to askwomen.csv and askmen.csv datasets"
+    "# Saving comment data to askwomen.csv and askmen.csv datasets\n",
+    "Do not run unless you a backup of the original data is made."
    ]
   },
   {
@@ -11974,7 +11975,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_men.to_csv('./data/askmen.csv', sep = ';', encoding = \"utf-8\", index = None, header = True)"
+    "#df_men.to_csv('./data/askmen.csv', sep = ';', encoding = \"utf-8\", index = None, header = True)"
    ]
   },
   {
@@ -11984,7 +11985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_women.to_csv('./data/askwomen.csv', sep = ';', encoding = \"utf-8\", index = None, header = True)"
+    "#df_women.to_csv('./data/askwomen.csv', sep = ';', encoding = \"utf-8\", index = None, header = True)"
    ]
   },
   {
