prepared sentiment analysis scipt sections and added needed packages

--- a/4_sentimental_analysis.ipynb
+++ b/4_sentimental_analysis.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e6a1a4d5",
+   "metadata": {},
+   "source": [
+    "# Krystian Gronek & Katarzyna Piotrowska\n",
+    "# Text Mining and Social Media Mining, final project - Analyzing men and women comments using NLP methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76b6a838",
+   "metadata": {},
+   "source": [
+    "# Loading packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "24a7329e",
@@ -11,8 +28,179 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "%matplotlib inline \n"
+    "%matplotlib inline \n",
+    "\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('vader_lexicon')\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
+    "analyser = SentimentIntensityAnalyzer()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e2a3062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "men = pd.read_csv('data/askmen.csv', sep = ';')\n",
+    "women = pd.read_csv('data/askwomen.csv', sep = ';')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7db882a",
+   "metadata": {},
+   "source": [
+    "# Sentiment analysis - user comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0fd9a75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a2f6113",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63491974",
+   "metadata": {},
+   "source": [
+    "### Male comments from /r/AskMen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "734516cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a327d5a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8832b1a4",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Female comments from /r/AskWomen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfba61dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a785a1ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdb3d212",
+   "metadata": {},
+   "source": [
+    "# Sentiment analysis - submission posts titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6ace695",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b53aab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a3d91bc",
+   "metadata": {},
+   "source": [
+    "### Submission titles from /r/AskMen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd34f7d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fece081",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e24f597",
+   "metadata": {},
+   "source": [
+    "### Submission titles from /r/AskWomen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a2bf2b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8547959d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba293f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
