Added more explanation for operations.

--- a/2_dataset_preparation.ipynb
+++ b/2_dataset_preparation.ipynb
@@ -1554,7 +1554,7 @@
     "women_posts_stw = stop_words_removal(women_posts)\n",
     "women_posts_tok = tokenization(women_posts)\n",
     "women_posts_stm = stemming(stop_words_removal(women_posts)) # with stop words (stw) removed\n",
-    "women_posts_tok_stw = tokenization(stop_words_removal(women_posts)) # with stop words (stw) removed\n"
+    "women_posts_tok_stw = tokenization(stop_words_removal(women_posts)) # with stop words (stw) removed"
    ]
   },
   {
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14280896",
+   "id": "8a078ea7",
    "metadata": {},
    "source": [
     "As we can see the comment score values seem to be heavily positively skewed because of the big values of the ouliers. The max comment score value for men is 8059 and women 4758 upvotes while their means are respectively equal to 17.725594 and 13.544593. Looking at the quantiles we could decide which values should we delete from our datasets."
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96c54e2",
+   "id": "360c53e2",
    "metadata": {},
    "source": [
     "Looking at the quantiles in the dataframe above we decided to remove values that are bigger than 107 score because values for both men and women are very close to each other and both datasets will contain 98% of the observations. At the bottom we can see distributions plots of datasets with values less than 107 "
@@ -1956,7 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ce76b18c",
+   "id": "5bf20cac",
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f7d962fd",
+   "id": "a0d97eeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2022,152 +2022,15 @@
     "\n",
     "$$x' = a + \\frac{(x - min(x))(b - a)}{max(x) - min(x)}$$\n",
     "\n",
-    "There are two"
+    "There are two approaches to scaling variable 'comment_score' in this project. First is to scale them in relation to the whole range of values of this variable marked as \"ungrouped data\" below and the second is to scale values of 'comment_score' in relation to the submission posts in which there were in. This approach is used because some submissions obtained during scraping of the data were higher in the 'hot' section of the posts and got much more traffic resulting in bigger 'comment_score' values. Thus grouping allows us to take traffic in the posts into account."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "854c9a00",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-32"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "107"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-23"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "107"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "men2.comment_score.min()\n",
-    "men2.comment_score.max()\n",
-    "women2.comment_score.min()\n",
-    "women2.comment_score.max()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "1f3a23bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10       0.093525\n",
-       "15       0.323741\n",
-       "18       0.697842\n",
-       "19       0.597122\n",
-       "20      -0.381295\n",
-       "           ...   \n",
-       "17275   -0.496403\n",
-       "17276   -0.496403\n",
-       "17277   -0.496403\n",
-       "17278   -0.410072\n",
-       "17279   -0.525180\n",
-       "Name: comment_score, Length: 16664, dtype: float64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-1.0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "10       0.080000\n",
-       "15       0.400000\n",
-       "18       0.920000\n",
-       "19       0.780000\n",
-       "20      -0.580000\n",
-       "           ...   \n",
-       "17275   -0.666667\n",
-       "17276   -0.666667\n",
-       "17277   -0.666667\n",
-       "17278    0.333333\n",
-       "17279   -1.000000\n",
-       "Name: comment_score, Length: 16664, dtype: float64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-1.0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Men\n",
     "# Ungrouped data\n",
@@ -2175,10 +2038,6 @@
     "denominator_men = men2.comment_score.max() - men2.comment_score.min()\n",
     "# minmax_men = nominator_men / denominator_men # for [0,1] interval\n",
     "minmax_men = -1 +  nominator_men * (1 - (-1)) / denominator_men\n",
-    "\n",
-    "minmax_men\n",
-    "minmax_men.min()\n",
-    "minmax_men.max()\n",
     "\n",
     "# Grouped data by submission title\n",
     "min_grouped = men2.groupby(['submission_title']).comment_score.transform('min')\n",
@@ -2188,103 +2047,16 @@
     "# minmax_men_grouped = nominator_men / denominator_men # for [0,1] interval\n",
     "minmax_men_grouped = -1 +  nominator_men * (1 - (-1)) / denominator_men\n",
     "\n",
-    "minmax_men_grouped\n",
-    "minmax_men_grouped.min()\n",
-    "minmax_men_grouped.max()\n",
-    "\n",
     "men2['minmax'] = minmax_men\n",
     "men2['minmax_grouped'] = minmax_men_grouped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "b9aa5d75",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       -0.215385\n",
-       "1       -0.400000\n",
-       "2       -0.415385\n",
-       "3       -0.446154\n",
-       "4       -0.461538\n",
-       "           ...   \n",
-       "16844   -0.630769\n",
-       "16849   -0.630769\n",
-       "16850   -0.630769\n",
-       "16852   -0.630769\n",
-       "16854   -0.630769\n",
-       "Name: comment_score, Length: 15097, dtype: float64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-1.0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0        1.000000\n",
-       "1        0.142857\n",
-       "2        0.071429\n",
-       "3       -0.071429\n",
-       "4       -0.142857\n",
-       "           ...   \n",
-       "16844   -0.940000\n",
-       "16849   -0.940000\n",
-       "16850   -0.940000\n",
-       "16852   -0.940000\n",
-       "16854   -0.940000\n",
-       "Name: comment_score, Length: 15097, dtype: float64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-1.0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Women\n",
     "# Ungrouped data\n",
@@ -2292,10 +2064,6 @@
     "denominator_women = women2.comment_score.max() - women2.comment_score.min()\n",
     "# minmax_women = nominator_women / denominator_women # for [0,1] interval\n",
     "minmax_women = -1 +  nominator_women * (1 - (-1)) / denominator_women\n",
-    "\n",
-    "minmax_women\n",
-    "minmax_women.min()\n",
-    "minmax_women.max()\n",
     "\n",
     "# Grouped data by submission title\n",
     "min_grouped = women2.groupby(['submission_title']).comment_score.transform('min')\n",
@@ -2305,12 +2073,16 @@
     "# minmax_women_grouped = nominator_women / denominator_women # for [0,1] interval\n",
     "minmax_women_grouped = -1 +  nominator_women * (1 - (-1)) / denominator_women\n",
     "\n",
-    "minmax_women_grouped\n",
-    "minmax_women_grouped.min()\n",
-    "minmax_women_grouped.max()\n",
-    "\n",
     "women2['minmax'] = minmax_women\n",
     "women2['minmax_grouped'] = minmax_women_grouped"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60008520",
+   "metadata": {},
+   "source": [
+    "We will focus more on showing the distribution of this scaled variable in the following script."
    ]
   },
   {
@@ -2323,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "569ae323",
    "metadata": {},
    "outputs": [],
