Added finished codes for TMSMM analysis project

--- a/2_dataset_preparation.ipynb
+++ b/2_dataset_preparation.ipynb
@@ -690,7 +690,7 @@
    "id": "398862b0",
    "metadata": {},
    "source": [
-    "It should also be checked weather the username contains 'bot' substring and delete such comments as they can be submitted by bots (created by other reddit users to auto submit comment responses to other users comments or posts), which we do not want. For that function ```check_if_bot(usernames)``` is constructed below along with the code needed to clean the data."
+    "It should also be checked whether the username contains 'bot' substring and delete such comments as they can be submitted by bots (created by other reddit users to auto submit comment responses to other users comments or posts), which we do not want. For that function ```check_if_bot(usernames)``` is constructed below along with the code needed to clean the data."
    ]
   },
   {
