fixed typos and text mistakes

--- a/1_scraping_reddit_data_TMSMM.ipynb
+++ b/1_scraping_reddit_data_TMSMM.ipynb
@@ -11965,7 +11965,7 @@
    "metadata": {},
    "source": [
     "# Saving comment data to askwomen.csv and askmen.csv datasets\n",
-    "Do not run unless you a backup of the original data is made."
+    "Do not run unless you have a backup of the original data is made."
    ]
   },
   {
