--- a/3_visualization.ipynb
+++ b/3_visualization.ipynb
@@ -917,7 +917,7 @@
    "id": "9768ef16",
    "metadata": {},
    "source": [
-    "Above we can see wordclouds for /r/AskMen and /r/AskWomen comments. We can say that for men the most common words are make, good, way and women, while for women the most common words are life, friend, feel and love. Wha's very interesting is that women seem to not use word 'men' as much as men do 'women'. Below we can see the barplots with counts of 20 most common words from word clouds approprietly for men and women comments "
+    "Above we can see wordclouds for /r/AskMen and /r/AskWomen comments. We can say that for men the most common words are \"make\", \"good\", \"way\" and \"women\", while for women the most common words are \"life\", \"friend\", \"feel\" and \"love\". What's very interesting is that women seem to not use word 'men' as much as men do 'women'. Below we can see the barplots with counts of 20 most common words from word clouds approprietly for men and women comments "
    ]
   },
   {
