--- a/4_sentimental_analysis.ipynb
+++ b/4_sentimental_analysis.ipynb
@@ -117,7 +117,7 @@
     "\n",
     "To predict sentiment of the text based on compounded polarity values returned from VADER analyzer, which are between values from -1 to 1, we will assign 'positive' sentiment to those for which the polarity value is greater than 0 and 'negative' sentiment for those that are less than or equal to zero.\n",
     "\n",
-    "The same classification based on polarity scores will be applied to submissions titles but because we do not have the scores just the number of upvotes (as said before users skip downvoting posts, just upvote them if they like the discussion topic) we can't assign a priori sentiment of the text used in the submission title. Thus we will only analyze the predicted sentiment of the posts."
+    "The same classification based on polarity scores will be applied to submissions titles but because we do not have the scores just the number of upvotes (as said before users skip downvoting posts, just upvote them if they like the discussion topic) we can't assign *a priori* sentiment of the text used in the submission title. Thus we will only analyze the predicted sentiment of the posts."
    ]
   },
   {
@@ -133,7 +133,7 @@
    "id": "c03ac155",
    "metadata": {},
    "source": [
-    "Below we can see the codes that calculate the polarity score using VADER (Valence Aware Dictionary and sentiment Reasoner):"
+    "Below we can see the codes that calculate the polarity score using VADER (Valence Aware Dictionary and Sentiment Reasoner):"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "source": [
     "Looking at the accuracy of the prediction based on data we can see that for men 53.13 % of the comments were predicted correctly, 24.33% were overestimated (positive sentiment predicted for negative sentiment assigned comment) and 22.54 % were underestimated (negative sentiment predicted for positive sentiment assigned comment). For women 53.34% of the comments were predicted correctly, 28.67% were overestimated and 17.99 % were underestimated.\n",
     "\n",
-    "These predictions are of course only relative to our variable 'comment_score' which as we said before is just a rudimentary approximation of the sentiment from users upvotes. Similarity of our ratios can also be attributed to the balance of our overestimated and underestimated values from data. For men the number of overestimated predictions were almost equal to the underestimated prediction which is the reason the predicted count plot is similar to the data one. \n",
+    "These predictions are of course only relative to our variable 'comment_score' which as we said before is just a rudimentary approximation of the sentiment from user upvotes. Similarity of our ratios can also be attributed to the balance of our overestimated and underestimated values from data. For men the number of overestimated predictions were almost equal to the underestimated prediction which is the reason the predicted count plot is similar to the data one. \n",
     "\n",
     "In case of women predictions it's also the reason that the prediction moved the ratio in favour of positive comments. The net change of the negative to positve sentiment of the comments is equal to 10.68 %. It is a significant chunk of observations and we could say that it means that the language that women use may be more positive that their comment score would predict. "
    ]
@@ -558,12 +558,12 @@
    "id": "9cd4f950",
    "metadata": {},
    "source": [
-    "Comments to the predicted positive word clouds:\n",
+    "<b>Comments to the predicted positive word clouds:\n",
     "\n",
     "When looking at cloud of words coming from positive comments we can see that for /r/AskMen comments were mostly using words like: \"make\", \"friend\", \"good\", \"things\", while for /r/AskWomen the most commonly used words were \"friend\", \"love\", \"feel\". \n",
     "\n",
     "\n",
-    "Comments to the predicted negative word clouds:\n",
+    "<b>Comments to the predicted negative word clouds:\n",
     "\n",
     "When looking at cloud of words coming from positive comments we can see that for /r/AskMen comments were mostly using words like: \"go\", \"even\", \"got\", \"never\", \"women\", \"men\", \"make\", \"day\", \"way\", \"break\" while for /r/AskWomen the most commonly used words were \"feel\", \"day\", \"never\", \"still\", \"much\", \"life\", \"even\", \"year\", \"make\".\n"
    ]
@@ -582,7 +582,7 @@
    "metadata": {},
    "source": [
     "The comments for analysis of posts will be at the bottom of this subsection.\n",
-    "Below we can see the codes that calculate the polarity score of submissions:"
+    "Below we can see the codes that calculate the polarity score of posts:"
    ]
   },
   {
@@ -898,7 +898,7 @@
     "\n",
     "For posts titles we could not determine the sentiment prediction matching to the score because of the lack of data but we can see that relatively post titles ratio of negative to positive sentiment were smaller for /r/AskMen and bigger for /r/AskWomen. \n",
     "\n",
-    "Because we can't assume that the questions asked in form of posts titles were made by specific sex we can't draw conclusion whether men or women are more positive in term of asking questions on /r/AskWomen and /r/AskMen. We could theoretize that because we could assume the sex for comments replies and women reply comments are more relatively less negative compared to men, that because the dependance is inverse not that the questions asked in /r/AskMen are made mostly by women while in /r/AskWomen mostly by men."
+    "Because we can't assume that the questions asked in form of posts titles were made by specific sex we can't draw conclusion whether men or women are more positive in term of asking questions on /r/AskWomen and /r/AskMen. We could theoretize that because we could assume the sex for comments replies and women reply comments are more relatively less negative compared to men, that because the dependance for posts is inverse not that the questions asked in /r/AskMen are made mostly by women while in /r/AskWomen mostly by men."
    ]
   },
   {
@@ -917,8 +917,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "men.to_csv('./data/final_askmen.csv', sep = ';', encoding = \"utf-8\", index = None, header = True)\n",
-    "women.to_csv('./data/final_askwomen.csv', sep = ';', encoding = \"utf-8\", index = None, header = True)"
+    "#men.to_csv('./data/final_askmen.csv', sep = ';', encoding = \"utf-8\", index = None, header = True)\n",
+    "#women.to_csv('./data/final_askwomen.csv', sep = ';', encoding = \"utf-8\", index = None, header = True)"
    ]
   }
  ],
