--- a/5_categorization.ipynb
+++ b/5_categorization.ipynb
@@ -58,7 +58,7 @@
     "- as word counts, representing how many times a word appears in comments or posts in particular subreddit\n",
     "- as TF-IDF (Term Frequency - Inverse Document Frequency) score acting as weights corresponding to each word\n",
     "\n",
-    "After that we divide the dataset into training and test parts and fit the model. Finally we make predictions and assess the model accuracy."
+    "After that we divide the dataset into training and test parts and fit the model. Finally we make predictions for text categorization and assess the model accuracy."
    ]
   },
   {
@@ -263,7 +263,7 @@
     "\n",
     "Accuracy of predictions for vectorized, word counts transformed text were accurate in 84.4% of the comments in train data and 76.9% in test data. For TF-IDF transformed text data we can see that the accuracy of the model increased slightly. Now the predictions were accurate in 86.6% in train data and 77.6% in test data. We can also see the classification reports and confusion matrices for vectorized and TF-IDF transformed text.\n",
     "\n",
-    "Overall we can say the predictions were relatively high, suggesting that there is a distinction in how men and women write replies on Reddit and the selection of the words that they are using."
+    "Overall we can say the categorization predictions were relatively high, suggesting that there is a distinction in how men and women write replies on Reddit and the selection of the words that they are using."
    ]
   },
   {
